
  * debian/init.d-functions: If there are no clusters, exit with 4 (LSB-code
    for "unknown status") instead of 0 (which means "service is running", but
    it is debatable and confusing whether all clusters are running if there
    are none at all). (LP: #203966)
  * Update Spanish debconf translations, thanks Javier Fernández-Sanguino
    Peña. (Closes: #473405)

 -- Martin Pitt <mpitt@debian.org>  Sun, 30 Mar 2008 17:55:10 +0200

postgresql-common (86) unstable; urgency=low

  * Update Japanese debconf translations, thanks Hideki Yamane!
    (Closes: #464769)
  * Update French debconf translations, thanks Guilhelm Panaget!
    (Closes: #467660)
  * Update Finish debconf translations, thanks Esko Arajärvi!
    (Closes: #468548)
  * pg_upgradecluster: Document 'datadir' argument. (Closes: #466258)

 -- Martin Pitt <mpitt@debian.org>  Sat, 01 Mar 2008 16:47:05 +0100

postgresql-common (85) unstable; urgency=low

  * debian/README.Debian: Fix fatal typo that suggested dropping the wrong
    cluster on upgrade. (Closes: #464064)
  * pg_upgradecluster: Fix some typos in the POD, thanks to Brendan Jurd!

 -- Martin Pitt <mpitt@debian.org>  Wed, 06 Feb 2008 15:22:03 +0100

postgresql-common (84) unstable; urgency=low

  * Add t/140_pg_config.t: Check correct output of pg_config, to avoid bugs
    like #455509 and #462037 in the future.
  * t/040_upgrade.t: Create and cd into an inaccessible test directory.
  * pg_upgradecluster: Chdir to / before the upgrade to avoid confusing error
    messages about inaccessible cwd.
  * debian/README.Debian: Update for 8.3 being the default version. Drop
    description of 7.4 autovacuum daemon magic, since it is obsolete now.
  * debian/postgresql-common.templates: Point to README.Debian.
  * debian/postgresql-common.cron.d: Update for 8.3, and add warnings and doc
    pointer about enabling regular VACUUM FULL. (LP: #186831)
  * PgCommon.pm, get_cluster_locales(): Print proper error message when server