@@ -208,7 +208,7 @@ search_path = '\$user,public'
 default_tablespace = ''	
 check_function_bodies = true
 default_transaction_isolation = 'read committed'
-default_transaction_read_only = false
+default_transaction_read_only = true
 statement_timeout = 0		
 datestyle = 'iso, mdy'
 timezone = unknown		
@@ -348,7 +348,7 @@ search_path = '\$user,public'
 default_tablespace = ''
 check_function_bodies = on
 default_transaction_isolation = 'read committed'
-default_transaction_read_only = off
+default_transaction_read_only = on
 statement_timeout = 0
 datestyle = 'iso, mdy'
 timezone = unknown
@@ -497,7 +497,7 @@ search_path = '\"\$user\",public'
 default_tablespace = ''
 check_function_bodies = on
 default_transaction_isolation = 'read committed'
-default_transaction_read_only = off
+default_transaction_read_only = on
 statement_timeout = 0
 vacuum_freeze_min_age = 100000000
 datestyle = 'iso, mdy'
