@@ -6,8 +6,12 @@ postgresql-common (87) UNRELEASED; urgency=low
     are none at all). (LP: #203966)
   * Update Spanish debconf translations, thanks Javier Fernández-Sanguino
     Peña. (Closes: #473405)
+  * t/060_obsolete_confparams.t: Run upgrades under
+    default_transaction_read_only. t/040_upgrade.t still uses the default
+    "false", so both cases get tested. This replicates the problem report from
+    Karsten Hilbert.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 30 Mar 2008 17:55:10 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun, 30 Mar 2008 18:26:57 +0200
 
 postgresql-common (86) unstable; urgency=low
 
